fixed minus button posistion to align with dropdown instead of stack

--- a/src/features/calculator/components/unitForm.module.css
+++ b/src/features/calculator/components/unitForm.module.css
@@ -33,6 +33,10 @@
   }
 }
 
+.attackProfile {
+  display: flex;
+}
+
 .defensiveStats__wrapper {
   display: flex;
   flex-direction: column;
@@ -159,8 +163,7 @@
     margin-right: 2rem;
   }
   .minus svg {
-    background-color: transparent;
-    padding: 0;
-    color: #001524;
+    background-color: #196774;
+    color: #ffecd1;
   }
 }
